tests/idris2/reg015/expected
1/1: Building anyfail (anyfail.idr)
Error: showing (MkEvenMoreComplicated (MkMoreComplicated (MkComplicated (PtrAndSize {addr:889} {len:890})))) SomethingVeryComplicatedIs is not a valid impossible case.

anyfail:21:1--21:48
 17 |         TooComplicatedToBeTrue
 18 |             (MkEvenMoreComplicated (MkMoreComplicated (MkComplicated (PtrAndSize addr len))))
 19 | 
 20 | showing  :  (something : EvenMoreComplicated) -> (TooComplicatedToBeTrue something) -> Void
 21 | showing _ SomethingVeryComplicatedIs impossible
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

